feat: add simdjson-java 3-way benchmark and refresh docker_10m_200m artifacts